//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Property {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  propertyType PropertyType
  propertyTypeId Int [not null]
  description String
  city String [not null]
  country String [not null]
  bedrooms Int [not null]
  beds Int [not null]
  baths Int
  entirePlace Boolean [not null, default: false]
  defaultImage String
  amenities AmenitiesOnProperty [not null]
  host User
  hostId Int
  reviews Review [not null]
}

Table Review {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  comment String [not null]
  rating Int [not null]
  reviewer User [not null]
  reviewerId Int [not null]
  property Property [not null]
  propertyId Int [not null]
}

Table Amenity {
  id Int [pk, increment]
  properties AmenitiesOnProperty [not null]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table AmenitiesOnProperty {
  amenity Amenity [not null]
  amenityId Int [not null]
  property Property
  propertyId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (amenityId, propertyId) [pk]
  }
}

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  firstName String
  lastName String
  profile Profile
  properties Property [not null]
  reviews Review [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Profile {
  id Int [pk, increment]
  bio String
  profilePic String
  account User [not null]
  accountId String [unique, not null]
  superHost Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table PropertyType {
  id Int [pk, increment]
  name String [unique, not null]
  type Property [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: Property.propertyTypeId > PropertyType.id

Ref: Property.hostId > User.id

Ref: Review.reviewerId > User.id

Ref: Review.propertyId > Property.id

Ref: AmenitiesOnProperty.amenityId > Amenity.id

Ref: AmenitiesOnProperty.propertyId > Property.id

Ref: Profile.accountId - User.email